[package]
name = "superlu"
version = "0.3.1"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides an interface to SuperLU."
documentation = "https://docs.rs/superlu"
homepage = "https://github.com/stainless-steel/superlu"
repository = "https://github.com/stainless-steel/superlu"

[dependencies]
libc = "0.2"
matrix = { version = "0.21", default-features = false }
superlu-sys = "0.3"
